--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,57 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Created by https://www.gitignore.io/api/eclipse,java
 
-# Folder config file
-Desktop.ini
+### Eclipse ###
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Eclipse Core
+.project
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# External tool builders
+.externalToolBuilders/
 
-# Windows shortcuts
-*.lnk
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# =========================
-# Operating System Files
-# =========================
+# CDT-specific
+.cproject
 
-# OSX
-# =========================
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-.DS_Store
-.AppleDouble
-.LSOverride
+# Java annotation processor (APT)
+.factorypath
 
-# Thumbnails
-._*
+# PDT-specific
+.buildpath
 
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
+# sbteclipse plugin
+.target
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# TeXlipse plugin
+.texlipse
+
+
+### Java ###
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
